tests/bad/method-arity.pas
program method_arity;

function f(x);
begin
    f := x
end;

begin
    f(1, 2)
end.
